[package]
name = "rustmart"
version = "0.1.0"
authors = ["Waldemar <waldemar.schwan@uswitch.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "*"
wasm-bindgen = "*"
anyhow = "1.0.32"
serde = { version = "1.0", features = ["derive"] }
